# ActividadEnClase3

./: CMakeLists.txt  MetodosFactorial.h  MetodosOperaciones.h  README.md  main.cpp  sonar-project.properties
.github/workflows/: build.yml
tests/: CMAKELists.txt  test_Factorial.cpp  test_Operaciones.cpp
